[package]
name = "hyperon"
version = "0.1.6"
authors = ["Vitaly Bogdanov <vsbogd@gmail.com>"]
edition = "2018"

[dependencies]
mopa = "0.2.2"
regex = "1.5.4"
log = "0.4.0"
env_logger = "0.8.4"
ctor = "0.2.0"
smallvec = "1.10.0"

[dev-dependencies]
serde = { version = "1.0.163", features = ["derive"]}
csv = "1.1.6"

[lib]
name = "hyperon"
path = "src/lib.rs"
crate-type = ["lib"]
